// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Movement test suite should generate a basic movement 1`] = `
{
  "events": [
    {
      "key": "D",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "V",
      "root": "C",
      "scaleName": "Mixolydian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "IV",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 1920,
      "key": {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    {
      "dur": 1920,
      "key": {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 1920,
    },
    {
      "dur": 1920,
      "key": {
        "root": "C",
        "scale": "1P 2M 3M 4P 5P 6M 7m",
      },
      "time": 3840,
    },
    {
      "dur": 1920,
      "key": {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 5760,
    },
  ],
}
`;

exports[`A Movement test suite should generate a basic movement in 3/4 1`] = `
{
  "events": [
    {
      "key": "D",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "V",
      "root": "C",
      "scaleName": "Mixolydian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "IV",
      "root": "Bb",
      "scaleName": "Lydian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "III",
      "root": "A",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    {
      "key": "D",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 480,
      "key": {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    {
      "dur": 480,
      "key": {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 480,
    },
    {
      "dur": 480,
      "key": {
        "root": "C",
        "scale": "1P 2M 3M 4P 5P 6M 7m",
      },
      "time": 960,
    },
    {
      "dur": 480,
      "key": {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 1440,
    },
    {
      "dur": 480,
      "key": {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 1920,
    },
    {
      "dur": 480,
      "key": {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 2400,
    },
  ],
}
`;

exports[`A Movement test suite should generate a long movement - turn rhythm 1`] = `
{
  "events": [
    {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    {
      "key": "F#",
      "position": "I",
      "root": "F#",
      "scaleName": "Ionian",
      "type": "key",
    },
    {
      "key": "F#",
      "position": "IV",
      "root": "B",
      "scaleName": "Lydian",
      "type": "mode",
    },
    {
      "key": "F#",
      "position": "III",
      "root": "A#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 3840,
      "key": {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    {
      "dur": 3840,
      "key": {
        "root": "F#",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 3840,
    },
    {
      "dur": 3840,
      "key": {
        "root": "B",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 7680,
    },
    {
      "dur": 3840,
      "key": {
        "root": "A#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 11520,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - euclidean 1`] = `
{
  "events": [
    {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    {
      "key": "A",
      "position": "II",
      "root": "B",
      "scaleName": "Dorian",
      "type": "mode",
    },
    {
      "key": "A",
      "position": "V",
      "root": "E",
      "scaleName": "Mixolydian",
      "type": "mode",
    },
    {
      "key": "B",
      "position": "V",
      "root": "B",
      "scaleName": "Mixolydian",
      "type": "key",
    },
    {
      "key": "B",
      "position": "IV",
      "root": "A",
      "scaleName": "Lydian",
      "type": "mode",
    },
    {
      "key": "B",
      "position": "IV",
      "root": "A",
      "scaleName": "Lydian",
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 1440,
      "key": {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    {
      "dur": 1440,
      "key": {
        "root": "B",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 1440,
    },
    {
      "dur": 960,
      "key": {
        "root": "E",
        "scale": "1P 2M 3M 4P 5P 6M 7m",
      },
      "time": 2880,
    },
    {
      "dur": 1440,
      "key": {
        "root": "B",
        "scale": "1P 2M 3M 4P 5P 6M 7m",
      },
      "time": 3840,
    },
    {
      "dur": 1440,
      "key": {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 5280,
    },
    {
      "dur": 960,
      "key": {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - turn rhythm 1`] = `
{
  "events": [
    {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "Lydian",
      "type": "mode",
    },
    {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "Lydian",
      "type": "mode",
    },
    {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "Lydian",
      "type": "mode",
    },
    {
      "key": "A",
      "position": "II",
      "root": "B",
      "scaleName": "Dorian",
      "type": "mode",
    },
    {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
  ],
  "timeline": [
    {
      "dur": 160,
      "key": {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    {
      "dur": 80,
      "key": {
        "root": "D",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 160,
    },
    {
      "dur": 1920,
      "key": {
        "root": "D",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 240,
    },
    {
      "dur": 480,
      "key": {
        "root": "D",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 2160,
    },
    {
      "dur": 2880,
      "key": {
        "root": "B",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 2640,
    },
    {
      "dur": 2160,
      "key": {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 5520,
    },
  ],
}
`;
